src/objects/Flex_Note_History__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Date_Time__c</fullName>
        <label>Answer Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeDescriptionSourcePart1__c</fullName>
        <label>CodeDescriptionSourcePart1</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CodeDescriptionSourcePart2__c</fullName>
        <label>CodeDescriptionSourcePart2</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CodeDescription__c</fullName>
        <label>CodeDescription</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlexNote_Question__c</fullName>
        <label>FlexNote Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_Note_Id__c</fullName>
        <externalId>true</externalId>
        <label>Flex Note Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsSecure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSecure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Question</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Request_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request History</label>
        <referenceTo>Service_Request_History__c</referenceTo>
        <relationshipLabel>Flex Note Histories</relationshipLabel>
        <relationshipName>Flex_Note_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Flex Note History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Request_History__c</columns>
        <columns>Flex_Note_Id__c</columns>
        <columns>Answer__c</columns>
        <columns>Answer_Date_Time__c</columns>
        <columns>CodeDescription__c</columns>
        <columns>Case__c</columns>
        <columns>FlexNote_Question__c</columns>
        <columns>Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OUC_DPW_Queue_Flex_Note_History</fullName>
        <filterScope>Queue</filterScope>
        <label>OUC DPW Queue</label>
        <queue>OUC_DPW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Flex Note History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flex Note Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>